--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   percent_indicator: ^4.0.1
   shared_preferences: ^2.0.15
   intl: ^0.17.0
+  flutter_local_notifications: ^12.0.4
 
 dev_dependencies:
   flutter_test:
