--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.0.15
   intl: ^0.17.0
   flutter_local_notifications: ^12.0.4
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - google_fonts/ArchivoNarrow-Bold.ttf
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
