--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.flutter_counter_app">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="flutter_counter_app"
+        android:label="PU Counter"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
