--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   intl: ^0.17.0
   flutter_local_notifications: ^12.0.4
   google_fonts: ^4.0.3
+  expandable_bottom_sheet: ^1.1.1+1
+  sliding_up_panel: ^2.0.0+1
+  flutter_heatmap_calendar: ^1.0.5
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
