--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,12 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   flutter_heatmap_calendar: ^1.0.5
   path_provider: ^2.0.15
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/PU logo.png"
 
 dev_dependencies:
   flutter_test:
